Replace How It Works with Three Dimensions (See, Think, Respond)

--- a/index.html
+++ b/index.html
@@ -348,43 +348,66 @@
         <div class="container">
             <div class="section-header fade-in">
                 <p class="section-label">How It Works</p>
-                <h2 class="section-title">Four Simple Steps</h2>
+                <h2 class="section-title">Three Dimensions of Learning</h2>
+                <p class="section-subtitle">Lumio Cat processes your learning through three integrated contexts</p>
             </div>
 
-            <div class="steps-grid">
-                <div class="step-card fade-in">
-                    <div class="step-number">1</div>
-                    <div class="step-icon">&#x1F4D6;</div>
-                    <h3>Show</h3>
-                    <p>Place your book, homework, or project on the desk. Lumio's camera automatically sees and understands it.</p>
+            <div class="dimensions-container fade-in">
+                <div class="dimension-card see">
+                    <div class="dimension-icon">
+                        <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="32" cy="32" r="28" stroke="currentColor" stroke-width="3"/>
+                            <circle cx="32" cy="32" r="12" fill="currentColor"/>
+                            <path d="M8 32C8 32 18 12 32 12C46 12 56 32 56 32C56 32 46 52 32 52C18 52 8 32 8 32Z" stroke="currentColor" stroke-width="3"/>
+                        </svg>
+                    </div>
+                    <h3>See</h3>
+                    <p class="dimension-subtitle">Visual Context</p>
+                    <p>AI vision captures your books, homework, handwriting, and workspace in real-time. No typing, no scanning—just natural learning.</p>
                 </div>
 
-                <div class="step-arrow fade-in">&#x27A1;</div>
-
-                <div class="step-card fade-in">
-                    <div class="step-number">2</div>
-                    <div class="step-icon">&#x1F5E3;&#xFE0F;</div>
-                    <h3>Ask</h3>
-                    <p>Speak naturally. "What does this mean?" "Help me solve this." Lumio listens and understands.</p>
+                <div class="dimension-connector">
+                    <div class="connector-line"></div>
+                    <div class="connector-dot"></div>
+                    <div class="connector-line"></div>
                 </div>
 
-                <div class="step-arrow fade-in">&#x27A1;</div>
-
-                <div class="step-card fade-in">
-                    <div class="step-number">3</div>
-                    <div class="step-icon">&#x2728;</div>
-                    <h3>Learn</h3>
-                    <p>Watch as explanations and guidance appear—projected right onto your workspace.</p>
+                <div class="dimension-card think">
+                    <div class="dimension-icon">
+                        <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M32 8C19 8 8 19 8 32C8 40 12 47 18 51V58L28 52C29.3 52.3 30.6 52.5 32 52.5C45 52.5 56 41.5 56 28.5C56 17 45 8 32 8Z" stroke="currentColor" stroke-width="3"/>
+                            <circle cx="24" cy="32" r="3" fill="currentColor"/>
+                            <circle cx="32" cy="32" r="3" fill="currentColor"/>
+                            <circle cx="40" cy="32" r="3" fill="currentColor"/>
+                        </svg>
+                    </div>
+                    <h3>Think</h3>
+                    <p class="dimension-subtitle">Cognitive Context</p>
+                    <p>Advanced AI understands your question, your learning history, and your emotional state to craft the perfect explanation.</p>
                 </div>
 
-                <div class="step-arrow fade-in">&#x27A1;</div>
-
-                <div class="step-card fade-in">
-                    <div class="step-number">4</div>
-                    <div class="step-icon">&#x1F4BE;</div>
-                    <h3>Remember</h3>
-                    <p>Your progress is saved. Smart reminders help you review and retain knowledge.</p>
+                <div class="dimension-connector">
+                    <div class="connector-line"></div>
+                    <div class="connector-dot"></div>
+                    <div class="connector-line"></div>
                 </div>
+
+                <div class="dimension-card respond">
+                    <div class="dimension-icon">
+                        <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="12" y="8" width="40" height="48" rx="4" stroke="currentColor" stroke-width="3"/>
+                            <path d="M20 20H44M20 28H44M20 36H36" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M32 44L40 52L56 36" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+                    <h3>Respond</h3>
+                    <p class="dimension-subtitle">Output Context</p>
+                    <p>Projects visual explanations, diagrams, and step-by-step guidance directly onto your workspace—screen-free learning.</p>
+                </div>
+            </div>
+
+            <div class="dimensions-flow fade-in">
+                <p>All three dimensions work together in a continuous loop, creating a <strong>personalized learning experience</strong> that adapts to you.</p>
             </div>
         </div>
     </section>
