--- a/index.html
+++ b/index.html
@@ -348,66 +348,84 @@
         <div class="container">
             <div class="section-header fade-in">
                 <p class="section-label">How It Works</p>
-                <h2 class="section-title">Three Dimensions of Learning</h2>
-                <p class="section-subtitle">Lumio Cat processes your learning through three integrated contexts</p>
+                <h2 class="section-title">The Learning Loop</h2>
             </div>
 
-            <div class="dimensions-container fade-in">
-                <div class="dimension-card see">
-                    <div class="dimension-icon">
+            <div class="learning-loop fade-in">
+                <!-- Step 1: Live Chat -->
+                <div class="loop-step step-1">
+                    <div class="step-badge">Step 1</div>
+                    <div class="step-icon-large">
                         <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="32" cy="32" r="28" stroke="currentColor" stroke-width="3"/>
-                            <circle cx="32" cy="32" r="12" fill="currentColor"/>
-                            <path d="M8 32C8 32 18 12 32 12C46 12 56 32 56 32C56 32 46 52 32 52C18 52 8 32 8 32Z" stroke="currentColor" stroke-width="3"/>
+                            <circle cx="32" cy="32" r="24" stroke="currentColor" stroke-width="3"/>
+                            <path d="M24 28C24 28 28 24 32 24C36 24 40 28 40 28" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            <circle cx="24" cy="24" r="3" fill="currentColor"/>
+                            <circle cx="40" cy="24" r="3" fill="currentColor"/>
+                            <path d="M20 38C20 38 24 44 32 44C40 44 44 38 44 38" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M48 20L56 12M48 44L56 52M16 20L8 12M16 44L8 52" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
                         </svg>
                     </div>
-                    <h3>See</h3>
-                    <p class="dimension-subtitle">Visual Context</p>
-                    <p>AI vision captures your books, homework, handwriting, and workspace in real-time. No typing, no scanning—just natural learning.</p>
+                    <h3>Live Chat</h3>
+                    <p>Speak naturally with Lumio Cat. Ask questions, share thoughts, and have a real conversation about what you're learning.</p>
                 </div>
 
-                <div class="dimension-connector">
-                    <div class="connector-line"></div>
-                    <div class="connector-dot"></div>
-                    <div class="connector-line"></div>
+                <div class="loop-arrow fade-in">
+                    <svg viewBox="0 0 24 24" fill="none"><path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                 </div>
 
-                <div class="dimension-card think">
-                    <div class="dimension-icon">
+                <!-- Step 2: Three Dimensions -->
+                <div class="loop-step step-2">
+                    <div class="step-badge">Step 2</div>
+                    <h3>Three Dimensions of Context</h3>
+                    <div class="context-dimensions">
+                        <div class="context-item">
+                            <div class="context-icon">
+                                <svg viewBox="0 0 48 48" fill="none"><rect x="8" y="6" width="32" height="36" rx="2" stroke="currentColor" stroke-width="2"/><path d="M14 14h20M14 22h20M14 30h12" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                            </div>
+                            <span>See Content</span>
+                            <p>Books, homework, handwriting</p>
+                        </div>
+                        <div class="context-item">
+                            <div class="context-icon">
+                                <svg viewBox="0 0 48 48" fill="none"><circle cx="24" cy="20" r="10" stroke="currentColor" stroke-width="2"/><path d="M16 34c0-4 4-6 8-6s8 2 8 6" stroke="currentColor" stroke-width="2"/><path d="M20 18h2M26 18h2M20 24c0 2 2 3 4 3s4-1 4-3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                            </div>
+                            <span>See Expression</span>
+                            <p>Your emotions & engagement</p>
+                        </div>
+                        <div class="context-item">
+                            <div class="context-icon">
+                                <svg viewBox="0 0 48 48" fill="none"><circle cx="24" cy="24" r="16" stroke="currentColor" stroke-width="2"/><path d="M24 14v10l6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M12 8L8 4M36 8l4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                            </div>
+                            <span>Long Memory</span>
+                            <p>Your learning history & progress</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="loop-arrow fade-in">
+                    <svg viewBox="0 0 24 24" fill="none"><path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </div>
+
+                <!-- Step 3: AI Feedback -->
+                <div class="loop-step step-3">
+                    <div class="step-badge">Step 3</div>
+                    <div class="step-icon-large">
                         <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M32 8C19 8 8 19 8 32C8 40 12 47 18 51V58L28 52C29.3 52.3 30.6 52.5 32 52.5C45 52.5 56 41.5 56 28.5C56 17 45 8 32 8Z" stroke="currentColor" stroke-width="3"/>
-                            <circle cx="24" cy="32" r="3" fill="currentColor"/>
-                            <circle cx="32" cy="32" r="3" fill="currentColor"/>
-                            <circle cx="40" cy="32" r="3" fill="currentColor"/>
+                            <rect x="8" y="16" width="48" height="32" rx="4" stroke="currentColor" stroke-width="3"/>
+                            <path d="M20 28l8 8 16-16" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M32 8v8M16 8l4 6M48 8l-4 6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                            <circle cx="12" cy="56" r="4" fill="currentColor"/>
+                            <circle cx="32" cy="56" r="4" fill="currentColor"/>
+                            <circle cx="52" cy="56" r="4" fill="currentColor"/>
                         </svg>
                     </div>
-                    <h3>Think</h3>
-                    <p class="dimension-subtitle">Cognitive Context</p>
-                    <p>Advanced AI understands your question, your learning history, and your emotional state to craft the perfect explanation.</p>
-                </div>
-
-                <div class="dimension-connector">
-                    <div class="connector-line"></div>
-                    <div class="connector-dot"></div>
-                    <div class="connector-line"></div>
-                </div>
-
-                <div class="dimension-card respond">
-                    <div class="dimension-icon">
-                        <svg viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="12" y="8" width="40" height="48" rx="4" stroke="currentColor" stroke-width="3"/>
-                            <path d="M20 20H44M20 28H44M20 36H36" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M32 44L40 52L56 36" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </div>
-                    <h3>Respond</h3>
-                    <p class="dimension-subtitle">Output Context</p>
-                    <p>Projects visual explanations, diagrams, and step-by-step guidance directly onto your workspace—screen-free learning.</p>
+                    <h3>AI Feedback</h3>
+                    <p>Personalized animations & audio-visual explanations—projected onto your workspace and voiced for clarity.</p>
                 </div>
             </div>
 
-            <div class="dimensions-flow fade-in">
-                <p>All three dimensions work together in a continuous loop, creating a <strong>personalized learning experience</strong> that adapts to you.</p>
+            <div class="loop-summary fade-in">
+                <p>This continuous loop creates a <strong>truly personalized learning experience</strong> that adapts to you in real-time.</p>
             </div>
         </div>
     </section>
