Add Co-Founders Colin Chen and Benny Liu to footer

--- a/index.html
+++ b/index.html
@@ -758,6 +758,17 @@
                 <span class="footer-logo">Lumio Cat</span>
                 <p>AI-Powered, Screen-Free Learning Companion</p>
             </div>
+            <div class="footer-founders">
+                <h4>Co-Founders</h4>
+                <div class="founder">
+                    <span>Colin Chen</span>
+                    <a href="mailto:colinchen4@gmail.com">colinchen4@gmail.com</a>
+                </div>
+                <div class="founder">
+                    <span>Benny Liu</span>
+                    <a href="mailto:liuxingben@foxmail.com">liuxingben@foxmail.com</a>
+                </div>
+            </div>
             <div class="footer-links">
                 <a href="#features">Features</a>
                 <a href="#audience">Who It's For</a>
